# ai-course-tutor2

./: .dockerignore  .env.example  .flake8  .gitignore  CONTRIBUTING.md  DEPLOYMENT.md  DEPLOYMENT_SETUP_COMPLETE.md  Dockerfile.backend  Dockerfile.frontend  Makefile  PRODUCTION_READINESS.md  PROJECT_OVERVIEW.md  QUICKSTART.md  README.md  RENDER_DEPLOYMENT.md  SECURITY.md  aws-ecs-task-definition.json  docker-compose.yml  full-install-output.txt  pyproject.toml  render.yaml
.github/workflows/: ci-cd.yml
backend/: config.py  config_prod.py  main.py
backend/chat/: __init__.py  flashcard_generator.py  generator.py  memory.py  notes_generator.py  quiz_generator.py  rag_chain.py  retriever.py  summary_generator.py
backend/database/: vector_store.py
backend/ingestion/: chunker.py  embedder.py  pdf_parser.py  pipeline.py
backend/models/: schemas.py
docs/: PLAN-ai-tutor-ingestion.md
frontend/: app.py
scripts/: deploy-aws.sh  deploy-gcloud.sh  start-dev.bat  start-dev.sh
tests/: test_pipeline.py  test_rag_pipeline.py  test_week1_improved.py  test_week2_gemini.py
