[build-system]
requires = ["setuptools>=65.5.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "project-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.5.9",
    "fastapi>=0.136.1",
    "google-generativeai>=0.8.6",
    "httpx>=0.28.1",
    "langchain>=1.3.1",
    "langchain-community>=0.4.1",
    "langchain-text-splitters>=1.1.2",
    "openai>=2.37.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "pypdf2>=3.0.1",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.28",
    "requests>=2.31.0",
    "streamlit>=1.30.0",
    "torch>=2.12.0",
    "uvicorn>=0.47.0",
]

[tool.setuptools.packages.find]
include = ["backend*"]
